--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
                         "tsConfig": "tsconfig.app.json",
                         "inlineStyleLanguage": "scss",
                         "assets": [
+                            "src/assets",
                             {
                                 "glob": "**/*",
                                 "input": "public"
@@ -85,6 +86,7 @@
                         "tsConfig": "tsconfig.spec.json",
                         "inlineStyleLanguage": "scss",
                         "assets": [
+                            "src/assets",
                             {
                                 "glob": "**/*",
                                 "input": "public"
@@ -100,6 +102,6 @@
         }
     },
     "cli": {
-      "analytics": false
+        "analytics": false
     }
 }
